Agregar estructura y estilos de la seccion del formulario

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://fonts.googleapis.com/css?family=ABeeZee&display=swap" rel="stylesheet">
   <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -89,7 +88,7 @@
           </div> -->
       <button id="button" class="btn btn-primary btn-lg">Cambiame</button>
     </div>
-    <section class="container-fluid p-5">
+    <section class="container-fluid p-5 backgroundB">
       <h2 style="padding: 80px;" class="text-white text-center">
         Characters of History
       </h2>
@@ -133,6 +132,63 @@
         </div>
       </div>
     </section>
+    <section id="contact">
+      <form action="">
+        <div class="container separation">
+          <div class="row">
+            <div class="col-md-6 mt-4">
+              <h3>
+                Mujeres de ciencia
+              </h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident inventore sint voluptatibus corporis
+                libero pariatur dolore et nobis. Maxime, ipsam iste quia beatae nam nemo a tempore. Quae, dolorem
+                perferendis.
+              </p>
+            </div>
+            <div class="col-md-6">
+              <div class="row">
+                <div class="col-md-12">
+                  <div class="form-group">
+                    <input id="name" type="text" class="form-control" placeholder="Ingrese su nombre">
+
+                  </div>
+                </div>
+                <div class="col-md-12">
+                  <div class="form-group">
+                    <input type="email" id="email" class="form-control" placeholder="Ingrese su correo">
+                  </div>
+                </div>
+                <div class="col-md-12">
+                  <div class="form-group">
+                    <input type="tel" id="telephone" class="form-control" placeholder="Ingrese su telefono">
+                  </div>
+                </div>
+                <div class="col-md-12">
+                  <div class="form-group">
+                    <label for="controlText"></label>
+                    <textarea id="controlText" rows="3" cols="35" class="fomr-control"
+                      placeholder="Ingresa tu comentario"></textarea>
+                  </div>
+                </div>
+                <div class="col-md-12">
+                  <div class="form-group">
+                    <input type="submit" value="enviar" id="buttonForm">
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </form>
+    </section>
+    <footer class="footer">
+      <div class="container footer-details">
+        <img src="./img/Ciencia_y_tecnologia.png" alt="logo" width="40px">
+        <ul class="list-inline">
+          <li class="list-inline-item"></li>
+        </ul>
+      </div>
+    </footer>
     <script>
       document.getElementById('title').classList.add('text-danger')
       document.getElementById('title').classList.remove('display-5')
