Agregar estilos de la seccion de redes sociales

--- a/index.html
+++ b/index.html
@@ -183,9 +183,44 @@
     </section>
     <footer class="footer">
       <div class="container footer-details">
-        <img src="./img/Ciencia_y_tecnologia.png" alt="logo" width="40px">
+        <img src="./img/Ciencia_y_tecnologia.png" alt="logo" width="60px">
         <ul class="list-inline">
-          <li class="list-inline-item"></li>
+          <li class="list-inline-item">
+            <a href="#">Home</a>
+          </li>
+          <li class="list-inline-item">
+            <a href="#">Characters</a>
+          </li>
+          <li class="list-inline-item">
+            <a href="#">Contact</a>
+          </li>
+        </ul>
+        <ul>
+          <li class="list-inline-item">
+            <a href="#">
+              <img class="img-fluid icon" src="./img/facebook.svg" alt="">
+            </a>
+          </li>
+          <li class="list-inline-item">
+            <a href="#">
+              <img class="img-fluid icon" src="./img/gorjeo.svg" alt="">
+            </a>
+          </li>
+          <li class="list-inline-item">
+            <a href="#">
+              <img class="img-fluid icon" src="./img/instagram.svg" alt="">
+            </a>
+          </li>
+          <li class="list-inline-item">
+            <a href="#">
+              <img class="img-fluid icon" src="./img/youtube.svg" alt="">
+            </a>
+          </li>
+          <li class="list-inline-item">
+            <a href="#">
+              <img class="img-fluid icon" src="./img/linkedin.svg" alt="">
+            </a>
+          </li>
         </ul>
       </div>
     </footer>
