Cambiar inicio de sesion

--- a/index.html
+++ b/index.html
@@ -32,18 +32,18 @@
         </li>
       </ul>
       <div class="login d-flex flex-row justify-content-center mt-4">
-        <div class="iconoDetails">
+        <div class="iconoDetails" id="text1">
           <a id="login1" class="nav-link" href="#"><img class="hidden" onmouseover="show()" onmouseout="ocultar()"
               src="./img/perfil.png" alt="user" width="35px"></a>
-          <p id="text">Login</p>
-        </div>
-        <div class="iconoDetails">
-          <a id="login2" class="nav-link" href="#"><img class="hidden" onmouseover="show()" onmouseout="ocultar()"
-              src="./img/salir.png" alt="salir" width="35px"></a>
-          <p id="text">Log Out</p>
+          <p>Login</p>
         </div>
         <div class="iconoDetails">
           <p class="nav-user" id="loginUser"></p>
+        </div>
+        <div class="iconoDetails" id="text2">
+          <a id="login2" class="nav-link" href="#"><img class="hidden" onmouseover="show()" onmouseout="ocultar()"
+              src="./img/salir.png" alt="salir" width="35px"></a>
+          <p>Log Out</p>
         </div>
       </div>
     </div>
