--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-  <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="./style/style.css">
+    <link rel="shortcut icon" href="./img/Ciencia_y_tecnologia.png" type="image/x-icon">
   <title>bootstrap</title>
 </head>
 
@@ -52,16 +53,16 @@
     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="./img/img4.png" class="d-block w-100" alt="...">
+          <img src="./img/img4.jpg" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
           <img src="./img/img3.jpg" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
-          <img src="./img/img2.jpeg" class="d-block w-100" alt="...">
+          <img src="./img/img2.jpg" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
-          <img src="./img/img1.jpeg" class="d-block w-100" alt="...">
+          <img src="./img/img1.jpg" class="d-block w-100" alt="...">
         </div>
       </div>
       <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
@@ -224,7 +225,7 @@
           </li>
         </ul>
       </div>
-      <small>@2020 All Rights Reserved. Created by <a href="#" class="font-weight-bold">Oriana</a> </small>
+      <small>@2020 All Rights Reserved. Created by <a href="https://github.com/oriananohemi" class="font-weight-bold">Oriana</a> </small>
     </footer>
     <script>
       document.getElementById('title').classList.add('text-danger')
